--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
