--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -20,7 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "jest": "jest",
+    "coverage": "jest --coverage"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
@@ -42,7 +41,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "husky": "^8.0.0",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3"
   }
