--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "husky": "^8.0.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^29.2.2",
+    "msw": "^0.49.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3"
   }
