--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "babel-jest": "^29.3.1",
     "husky": "^8.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.2.2",
     "msw": "^0.49.0",
     "prettier": "^2.7.1",
