--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest-environment-jsdom": "^29.2.2",
     "msw": "^0.49.0",
     "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
