--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "jest-playwright-preset": "^2.0.0",
     "node-sass": "^7.0.3",
+    "playwright": "^1.28.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "jest": "jest",
+    "jest:e2e": "jest --config jest.e2e.config.js",
     "coverage": "jest --coverage"
   },
   "proxy": "http://localhost:3001",
@@ -49,7 +52,7 @@
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.3.1",
     "husky": "^8.0.0",
-    "jest": "^29.3.1",
+    "jest": "^28.0.0",
     "jest-environment-jsdom": "^29.2.2",
     "msw": "^0.49.0",
     "prettier": "^2.7.1",
