--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.2",
-    "jest-playwright-preset": "^2.0.0",
     "node-sass": "^7.0.3",
-    "playwright": "^1.28.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -21,7 +19,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "jest": "jest",
-    "jest:e2e": "jest --config jest.e2e.config.js",
+    "jest:e2e": "PWDEBUG=0 jest --config jest.e2e.config.js --detectOpenHandles",
     "coverage": "jest --coverage"
   },
   "proxy": "http://localhost:3001",
@@ -51,10 +49,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.3.1",
+    "expect-playwright": "^0.8.0",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
     "jest-environment-jsdom": "^29.2.2",
+    "jest-playwright-preset": "^2.0.0",
     "msw": "^0.49.0",
+    "playwright": "^1.28.1",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "whatwg-fetch": "^3.6.2"
